src/test/ui/consts/const-call.stderr
error: cannot call non-const fn `f` in constant expressions
  --> $DIR/const-call.rs:8:17
   |
LL |     let _ = [0; f(2)];
   |                 ^^^^

error: aborting due to previous error

